More OCR chars recognized.

--- a/DebaUOchery/MainWindow.xaml
+++ b/DebaUOchery/MainWindow.xaml
@@ -16,13 +16,15 @@
                     <Button Name="btnCaptureStop" Content="StopCap" HorizontalAlignment="Left" Margin="112,10,0,0" VerticalAlignment="Top" Width="96" Click="btnCaptureStop_Click" IsEnabled="False"/>
                     <Button Name="btnExport" Content="Export" HorizontalAlignment="Left" Margin="213,10,0,0" VerticalAlignment="Top" Width="96" Click="btnExport_Click"/>
                     <ComboBox x:Name ="cmbAnimalType" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="314,10,191,0"/>
-                    <DataGrid AutoGenerateColumns="False" Name="dgLore" ItemsSource="{Binding LoreBinding}" HorizontalAlignment="Left"  Margin="8,53,0,0" VerticalAlignment="Stretch" Width="607" ColumnWidth="Auto">
+                    <Button Name="btnCAH" Content="CAH" HorizontalAlignment="Left" Margin="439,10,0,0" VerticalAlignment="Top" Width="96" Click="btnCAH_Click"/>
+                    <CheckBox Name="chkWild" Content="Wild" IsChecked="True" Margin="10,35,509,297"/>
+                    <DataGrid AutoGenerateColumns="False" Name="dgLore" ItemsSource="{Binding LoreBinding}" HorizontalAlignment="Left"  Margin="8,82,0,0" VerticalAlignment="Stretch" Width="607" ColumnWidth="Auto">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Prop" IsReadOnly="True" Binding="{Binding Path=Prop}"></DataGridTextColumn>
                             <DataGridTextColumn Header="Val" IsReadOnly="True"  Binding="{Binding Path=Val}"></DataGridTextColumn>
                         </DataGrid.Columns>
                     </DataGrid>
-                    
+
 
                 </Grid>
             </TabItem>
@@ -58,6 +60,7 @@
                     <TextBox x:Name="txtLastObjectID" Height="23" TextWrapping="Wrap" Text="" Width="120" Margin="84,90,421,244"/>
                 </Grid>
             </TabItem>
+
 
         </TabControl>
         <Button Name="btnConnect" Content="Connect to UO" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom" Width="96" Click="btnConnect_Click"/>
